Implementacao do recurso book.